--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,7 @@
-flask==2.3.2
+pytz==2024.1
+numpy==1.24.3
 pandas==2.0.3
-numpy==1.26.4
-pandas_ta
+pandas-ta==0.3.14b0
 requests==2.31.0
-oandapyV20==0.6.3
-pytz==2023.3
-scikit-learn==1.3.0
-tensorflow-cpu==2.16.1
-joblib==1.3.2
-python-telegram-bot
-keras
+oandapyV20==1.2.5
+python-dotenv==1.0.0
