--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
-pytz==2024.1
-numpy==1.24.3
-pandas==2.0.3
-pandas-ta==0.3.14b0
-requests==2.31.0
-oandapyV20==1.2.5
-python-dotenv==1.0.0
+pandas>=1.5.0
+numpy>=1.21.0
+pytz>=2022.7
+requests>=2.28.0
+oandapyV20>=0.8.0
+asyncio>=3.9.0
+aiohttp>=3.8.0
+python-dotenv>=0.19.0
+tabulate>=0.9.0
+python-telegram-bot>=20.0.0
