--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ pandas>=1.5.0
 numpy>=1.21.0
 pytz>=2022.7
 requests>=2.28.0
-oandapyV20>=0.8.0
+oandapyV20
 asyncio>=3.9.0
 aiohttp>=3.8.0
 python-dotenv>=0.19.0
