--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,28 @@
+# Core dependencies
 pandas>=1.5.0
 numpy>=1.21.0
 pytz>=2022.7
+
+# API clients
 requests>=2.28.0
-oandapyV20
-asyncio>=3.9.0
+oandapyV20>=1.0.0
 aiohttp>=3.8.0
+
+# Performance optimization
+numba>=0.56.0  # <<< ADD THIS FOR JIT COMPILATION
+
+# Utilities
 python-dotenv>=0.19.0
 tabulate>=0.9.0
+
+# Telegram (if used)
 python-telegram-bot>=20.0.0
+
+# Optional: Database for better data persistence
+# sqlite3 (built-in) or sqlalchemy>=1.4.0
+
+# Optional: Caching for API calls
+# cachetools>=5.0.0
+
+# Optional: Performance monitoring
+# psutil>=5.9.0
