--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,10 @@ numba>=0.56.0  # <<< ADD THIS FOR JIT COMPILATION
 python-dotenv>=0.19.0
 tabulate>=0.9.0
 
+fastai
+joblib
+scikit-learn
+
 # Telegram (if used)
 python-telegram-bot>=20.0.0
 
