--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
 # Core dependencies
-pandas>=1.5.0
-numpy>=1.21.0
+pandas==2.2.2
+numpy==1.26.0
 pytz>=2022.7
 
 # API clients
 requests>=2.28.0
-oandapyV20>=1.0.0
+oandapyV20>=0.7.2
 aiohttp>=3.8.0
 
 # Performance optimization
