--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,12 @@
-# Core - let the setup script handle specific versions
-pandas
-numpy
-pytz
-
-# APIs
-requests
-oandapyV20
-aiohttp
-
-# ML/AI
-scikit-learn
-joblib
-fastai
-torch
-torchvision
-
-# Utilities
-python-dotenv
-tabulate
-python-telegram-bot
-numba
-pandas-ta
-
-# Note: Let the setup script install specific versions that work with Colab
+pandas>=2.2.0 
+numpy>=1.21.0 
+pytz>=2022.7 requests>=2.28.0 
+oandapyV20>=1.0.0 
+aiohttp>=3.8.0 
+numba>=0.56.0 
+python-dotenv>=0.19.0 
+tabulate>=0.9.0 
+python-telegram-bot>=20.0.0 
+scikit-learn>=1.0.0 
+fastai>=2.7.0 
+joblib -q
